[gd_scene load_steps=39 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Items/flags.png" type="Texture" id=2]
[ext_resource path="res://GameContent/Flag.gd" type="Script" id=3]
[ext_resource path="res://Assets/GUI/Cog Pressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/Cog Hovered.png" type="Texture" id=5]
[ext_resource path="res://Assets/GUI/Cog.png" type="Texture" id=6]
[ext_resource path="res://GameContent/Flag_Area2D.gd" type="Script" id=8]
[ext_resource path="res://UI_Layer.gd" type="Script" id=9]
[ext_resource path="res://fonts/Pixel_Title.tres" type="DynamicFont" id=10]
[ext_resource path="res://fonts/Pixel_Chat.tres" type="DynamicFont" id=11]
[ext_resource path="res://fonts/Pixel_Button.tres" type="DynamicFont" id=12]
[ext_resource path="res://fonts/Pixel_SubTitle.tres" type="DynamicFont" id=13]
[ext_resource path="res://Hover_Button_Style.tres" type="StyleBox" id=14]
[ext_resource path="res://Pressed_Button_Style.tres" type="StyleBox" id=15]
[ext_resource path="res://Normal_Button_Style.tres" type="StyleBox" id=16]
[ext_resource path="res://fonts/Pixel_Button_Title.tres" type="DynamicFont" id=17]
[ext_resource path="res://fonts/pixel.TTF" type="DynamicFontData" id=18]
[ext_resource path="res://Assets/Sound/CTFTitlescreen.ogg" type="AudioStream" id=19]
[ext_resource path="res://Chat_Text.tres" type="RichTextEffect" id=20]
[ext_resource path="res://Assets/GUI/fullscreen.png" type="Texture" id=23]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 9
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 9
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 9
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=5]
size = 10
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
font_data = ExtResource( 18 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=7]
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
font_data = ExtResource( 18 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( -10, -9.171, 23.751, -8.802, 23.926, 33.35, -10, 33.419 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 1001.32 ],
"_edit_lock_": true,
"_edit_vertical_guides_": [ 959.427 ]
}

[node name="HTTPRequest_JoinMMQueue" type="HTTPRequest" parent="."]

[node name="HTTPRequest_CancelQueue" type="HTTPRequest" parent="."]

[node name="HTTPRequest_CreateGuest" type="HTTPRequest" parent="."]

[node name="HTTPRequest_GetLeaderboard" type="HTTPRequest" parent="."]

[node name="UI_Layer" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="HTTPRequest_LeaveParty" type="HTTPRequest" parent="UI_Layer"]

[node name="PartyText" type="RichTextLabel" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.49966
anchor_right = 0.5
anchor_bottom = 0.49966
margin_left = 551.0
margin_top = 58.1597
margin_right = 1188.0
margin_bottom = 515.16
rect_scale = Vector2( 0.639761, 0.639761 )
rect_clip_content = false
focus_mode = 2
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.368627, 0.368627, 0.368627, 1 )
bbcode_enabled = true
bbcode_text = "[center][color=black]Party Code[color=green]
1232

[color=black]Members[color=green]
carshalljd
themuffinman"
text = "Party Code
1232

Members
carshalljd
themuffinman"
scroll_active = false
selection_enabled = true
custom_effects = [ ExtResource( 20 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PartyText2" type="RichTextLabel" parent="UI_Layer"]
visible = false
anchor_left = 0.5
anchor_top = 0.49966
anchor_right = 0.5
anchor_bottom = 0.49966
margin_left = 478.0
margin_top = 325.367
margin_right = 1229.0
margin_bottom = 664.367
rect_scale = Vector2( 0.639761, 0.639761 )
rect_clip_content = false
focus_mode = 2
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.368627, 0.368627, 0.368627, 1 )
bbcode_enabled = true
bbcode_text = "[center][color=black]Party Code[color=green]
1232

[color=black]Members[color=green]
carshalljd
themuffinman"
text = "Party Code
1232

Members
carshalljd
themuffinman"
scroll_active = false
selection_enabled = true
custom_effects = [ ExtResource( 20 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -578.372
margin_top = -513.94
margin_right = 1341.63
margin_bottom = 530.249
rect_scale = Vector2( 0.6, 0.6 )
rect_clip_content = false
custom_fonts/mono_font = ExtResource( 10 )
custom_fonts/bold_italics_font = ExtResource( 10 )
custom_fonts/italics_font = ExtResource( 10 )
custom_fonts/bold_font = ExtResource( 10 )
custom_fonts/normal_font = ExtResource( 10 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]SUPERCTF.COM"
text = "SUPERCTF.COM"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Subtitle" type="RichTextLabel" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -456.689
margin_top = -394.733
margin_right = 975.311
margin_bottom = 127.267
rect_scale = Vector2( 0.639761, 0.639761 )
custom_fonts/mono_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 12 )
custom_colors/default_color = Color( 0.368627, 0.368627, 0.368627, 1 )
bbcode_enabled = true
bbcode_text = "[center]RANKED MULTIPLAYER CAPTURE THE FLAG"
text = "RANKED MULTIPLAYER CAPTURE THE FLAG"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerRank" type="RichTextLabel" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -690.366
margin_top = 419.531
margin_right = -442.366
margin_bottom = 512.529
rect_scale = Vector2( 0.576526, 0.576526 )
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 13 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][color=green]-"
text = "-"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerMMR" type="RichTextLabel" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -456.983
margin_top = 419.531
margin_right = -146.983
margin_bottom = 512.528
rect_scale = Vector2( 0.576526, 0.576526 )
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 13 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][color=green]-"
text = "-"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerRankSubtitle" type="RichTextLabel" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -931.857
margin_top = 482.655
margin_right = 45.1445
margin_bottom = 997.654
rect_scale = Vector2( 0.639761, 0.639761 )
custom_fonts/mono_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 12 )
custom_colors/default_color = Color( 0.368627, 0.368627, 0.368627, 1 )
bbcode_enabled = true
bbcode_text = "[center]RANK"
text = "RANK"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerMMRSubtitle" type="RichTextLabel" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -701.988
margin_top = 483.149
margin_right = 339.009
margin_bottom = 1005.15
rect_scale = Vector2( 0.639761, 0.639761 )
custom_fonts/mono_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 12 )
custom_colors/default_color = Color( 0.368627, 0.368627, 0.368627, 1 )
bbcode_enabled = true
bbcode_text = "[center]MMR"
text = "MMR"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MOTDText" type="RichTextLabel" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.49966
anchor_right = 0.5
anchor_bottom = 0.49966
margin_left = -824.0
margin_top = 12.3672
margin_right = 1363.0
margin_bottom = 534.367
rect_scale = Vector2( 0.639761, 0.639761 )
rect_clip_content = false
focus_mode = 2
custom_fonts/mono_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 12 )
custom_colors/default_color = Color( 0.368627, 0.368627, 0.368627, 1 )
bbcode_enabled = true
bbcode_text = "[color=black]NEWS:

Happy... mid February...  and welcome [color=blue][url=https://itch.io]Itch.io[/url][color=black] and [color=blue][url=https://iogames.space]iogames[/url][color=black] players! (And the rest of course)

[color=green]February 13th update[color=black]: A big UI update has just been released! Cosmetics are  in development!

[color=red]If you are having any issues, please report them on our discord!
[color=black]
Discord Link:[color=blue] [url]https://discord.gg/D3Ban34[/url][color=black]
Twitter:[color=blue] [url]https://twitter.com/SuperCTFGame[/url][color=black]
"
text = "NEWS:

Happy... mid February...  and welcome Itch.io and iogames players! (And the rest of course)

February 13th update: A big UI update has just been released! Cosmetics are  in development!

If you are having any issues, please report them on our discord!

Discord Link: https://discord.gg/D3Ban34
Twitter: https://twitter.com/SuperCTFGame
"
scroll_active = false
selection_enabled = true
custom_effects = [ ExtResource( 20 ) ]
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CancelQueueButton" type="Button" parent="UI_Layer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.5637
margin_top = 428.405
margin_right = 77.4363
margin_bottom = 498.404
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/normal = ExtResource( 16 )
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.113725, 0.113725, 0.113725, 1 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RankedButton" type="Button" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 221.549
margin_top = 419.946
margin_right = 539.549
margin_bottom = 501.949
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/normal = ExtResource( 16 )
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.137255, 0.137255, 0.137255, 1 )
text = "Ranked"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuickplayButton" type="Button" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.82
margin_top = 419.946
margin_right = 157.18
margin_bottom = 501.949
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/normal = ExtResource( 16 )
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.137255, 0.137255, 0.137255, 1 )
text = "Quickplay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAsGuestButton" type="Button" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.825
margin_top = 417.889
margin_right = 145.175
margin_bottom = 500.889
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/normal = ExtResource( 16 )
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.109804, 0.109804, 0.109804, 1 )
text = "Play as Guest"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CreateAccountButton" type="Button" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -643.091
margin_top = 418.0
margin_right = -282.091
margin_bottom = 501.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/normal = ExtResource( 16 )
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.109804, 0.109804, 0.109804, 1 )
text = "Create Account"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LoginButton" type="Button" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 276.642
margin_top = 418.0
margin_right = 491.642
margin_bottom = 501.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/normal = ExtResource( 16 )
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.109804, 0.109804, 0.109804, 1 )
text = "Login"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LogoutButton" type="Button" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -930.285
margin_top = 431.785
margin_right = -756.285
margin_bottom = 513.784
rect_scale = Vector2( 0.742863, 0.742863 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/normal = ExtResource( 16 )
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LOGOUT"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Options_Button" type="TextureButton" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -939.233
margin_top = -522.072
margin_right = -875.233
margin_bottom = -458.072
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Fullscreen_Button" type="TextureButton" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -935.177
margin_top = -452.182
margin_right = -862.177
margin_bottom = -373.182
rect_scale = Vector2( 0.742863, 0.742863 )
texture_normal = ExtResource( 23 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplashStartButton" type="Button" parent="UI_Layer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.813
margin_top = 426.355
margin_right = 203.187
margin_bottom = 496.358
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/normal = ExtResource( 16 )
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.137255, 0.137255, 0.137255, 1 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinPartyButton" type="Button" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 637.234
margin_top = 426.948
margin_right = 877.234
margin_bottom = 496.948
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/normal = ExtResource( 16 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.137255, 0.137255, 0.137255, 1 )
text = "Join Party"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RankedWarning" type="RichTextLabel" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.49966
anchor_right = 0.5
anchor_bottom = 0.49966
margin_left = 253.362
margin_top = 388.761
margin_right = 667.362
margin_bottom = 458.761
rect_scale = Vector2( 0.639761, 0.639761 )
rect_clip_content = false
focus_mode = 2
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.368627, 0.368627, 0.368627, 1 )
bbcode_enabled = true
bbcode_text = "[center][color=gray]Must be party host"
text = "Must be party host"
scroll_active = false
selection_enabled = true
custom_effects = [ ExtResource( 20 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuickplayWarning" type="RichTextLabel" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.49966
anchor_right = 0.5
anchor_bottom = 0.49966
margin_left = -129.007
margin_top = 387.329
margin_right = 284.993
margin_bottom = 457.329
rect_scale = Vector2( 0.639761, 0.639761 )
rect_clip_content = false
focus_mode = 2
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.368627, 0.368627, 0.368627, 1 )
bbcode_enabled = true
bbcode_text = "[center][color=gray]Must be party host"
text = "Must be party host"
scroll_active = false
selection_enabled = true
custom_effects = [ ExtResource( 20 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Searching_Text_Timer" type="Timer" parent="UI_Layer"]
wait_time = 0.3
autostart = true

[node name="Headline_Rect" type="ColorRect" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -824.0
margin_top = -355.0
margin_right = 824.0
margin_bottom = -325.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Headline_Text" type="RichTextLabel" parent="UI_Layer/Headline_Rect"]
margin_left = 5.0
margin_top = 10.0
margin_right = 1644.0
margin_bottom = 45.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "---GLOBAL-LEADERBOARD------GLOBAL-LEADERBOARD------GLOBAL-LEADERBOARD------GLOBAL-LEADERBOARD------GLOBAL-LEADERBOARD------GLOBAL-LEADERBOARD------GLOBAL-LEADERBOARD------GLOBAL-LEADERBOARD---"
text = "---GLOBAL-LEADERBOARD------GLOBAL-LEADERBOARD------GLOBAL-LEADERBOARD------GLOBAL-LEADERBOARD------GLOBAL-LEADERBOARD------GLOBAL-LEADERBOARD------GLOBAL-LEADERBOARD------GLOBAL-LEADERBOARD---"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLineEdit" type="LineEdit" parent="UI_Layer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.997
margin_top = 433.358
margin_right = 158.997
margin_bottom = 495.721
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 15
placeholder_text = "Enter Username"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="Control" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = -920.0
margin_bottom = -500.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Flags" type="Control" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = -920.0
margin_bottom = -500.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Flag" type="Node2D" parent="UI_Layer/Flags" groups=[
"Flags",
]]
position = Vector2( 1581.88, 123 )
scale = Vector2( 4, 3.04 )
z_as_relative = false
script = ExtResource( 3 )

[node name="Blue_Sprite" type="AnimatedSprite" parent="UI_Layer/Flags/Flag"]
visible = false
position = Vector2( 14, -16 )
scale = Vector2( 2, 2 )
frames = SubResource( 12 )
frame = 1
playing = true

[node name="Red_Sprite" type="AnimatedSprite" parent="UI_Layer/Flags/Flag"]
position = Vector2( 14, -16 )
scale = Vector2( 2, 2 )
frames = SubResource( 17 )
playing = true

[node name="Area2D" type="Area2D" parent="UI_Layer/Flags/Flag" groups=[
"Flag_Bodies",
]]
position = Vector2( 20.7922, -30.4714 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI_Layer/Flags/Flag/Area2D"]
position = Vector2( -20.7247, 2.43704 )
shape = SubResource( 18 )

[node name="Flag3" type="Node2D" parent="UI_Layer/Flags" groups=[
"Flags",
]]
position = Vector2( 293.104, 123 )
scale = Vector2( 4, 3.04 )
z_as_relative = false
script = ExtResource( 3 )

[node name="Blue_Sprite" type="AnimatedSprite" parent="UI_Layer/Flags/Flag3"]
position = Vector2( 14, -16 )
scale = Vector2( 2, 2 )
frames = SubResource( 12 )
playing = true

[node name="Red_Sprite" type="AnimatedSprite" parent="UI_Layer/Flags/Flag3"]
visible = false
position = Vector2( 14, -16 )
scale = Vector2( 2, 2 )
frames = SubResource( 17 )
frame = 3
playing = true

[node name="Area2D" type="Area2D" parent="UI_Layer/Flags/Flag3" groups=[
"Flag_Bodies",
]]
position = Vector2( 20.7922, -30.4714 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI_Layer/Flags/Flag3/Area2D"]
position = Vector2( -20.7247, 2.43704 )
shape = SubResource( 18 )

[node name="Titlemusic_Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
bus = "MusicBus"

[node name="Leaderboard_Refresh_Timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="Headline_Update_Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
